finally i handled button components and local stored data stored

--- a/src/components/Cosmetic/Cosmetic.css
+++ b/src/components/Cosmetic/Cosmetic.css
@@ -1,7 +1,7 @@
 .product{
     border: 2px solid sandybrown;
     border-radius: 16px;
-    background-color: gray;
+    background-color: peru;
     margin: 17px;
     padding: 10px;
 }
